# njavac

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  FUTURE_WORK.md  LICENSE  Makefile  README.md  ROADMAP.md  build-all.sh  docker-bench.sh  docker-verify.sh  rustfmt.toml
.github/workflows/: ci.yml
crates/njavac/: Cargo.toml
crates/njavac-benchmark/: Cargo.toml
crates/njavac-benchmark/tests/: benchmark_cli.rs
crates/njavac-classdump/: Cargo.toml
crates/njavac-compiler/: Cargo.toml
crates/njavac-fuzz/: Cargo.toml
docs/: Dockerfile  book.toml  check-code-references.sh  check-summary.sh  code-reference-exceptions.tsv  code-references.tsv  forbidden-terms.tsv
docs/src/: SUMMARY.md  index.md
fixtures/: Empty.java  Lits.java  Locals.java  Strings.java
fixtures/basics/: Arith.java  Mix.java  MixedLineTerminators.java
fixtures/branches/: AndOrIf.java  BigBody.java  BoolCastBoundary.java  BoolGroupingProvenance.java  BoolMatMerge.java  BoolMatTaintedNot.java  BoolPositionItem.java  CastCond.java  CmpAllOps.java  CompoundInIf.java  DeadBranch.java  ElseIfChain.java  FullFrame.java  GotoCompactDead.java  GotoCompactDiamond.java  GotoCompactIterate.java  (+29 more)
scratch-fuzz/: BoolMat.java  CastProbe.java  NotLocal.java  NotNot.java  P1.java  P2.java  P3.java  P4.java  P5.java  P6.java  P7.java  P8.java  cmp.sh
src/: ast.rs  classdump.rs  classfile.rs  codegen.rs  diagnostic.rs  fxhash.rs  lexer.rs  lib.rs  main.rs  parser.rs  sema.rs  span.rs
tests/: benchmark_cli.rs
tools/: FuzzJavac.java  FuzzObserve.java
(+265 files in other folders)
