[package]
name = "njavac-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
njavac.workspace = true
njavac-classdump.workspace = true
njavac-compiler.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "benchmark"
path = "src/bin/benchmark/main.rs"

[[bin]]
name = "benchmark_alloc"
path = "src/bin/benchmark_alloc.rs"
